# emf-eye

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  controller.json  controller.py  emf-2024-eye.py  pyproject.toml  scenes  setup.cfg
emf_2024_eye/: controller.py  listen.py  main.py  mic_array.py  scene.py  sensor.py  texture.py  warp.py
emf_eye/: controller.py  exceptions.py  main.py  radar.py  texture.py  warp.py
scenes/00-test_card/: scene.json
scenes/01-sauron/: scene.json
src/emf_eye/: controller.py  exceptions.py  main.py  scene.py  texture.py  warp.py
