[project]
name = "emf-eye"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "Warren Moore", email = "warren@wamonite.com" },
]
requires-python = ">=3.13"
dependencies = [
    "lpd8>=1.1.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
    "python-rtmidi>=1.5.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]

[project.scripts]
emf-eye = "emf_eye.main:run"

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "COM", # flake8-commas
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
]
ignore = [
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "ANN401", # any-type
    "E501", # Line too long
]
